dashboard WHITEPACE WRAPPING FIX

--- a/style.css
+++ b/style.css
@@ -121,12 +121,15 @@ input[type="search"] {
 	flex-direction: column;
 	gap: 30px;
 	line-height: 2;
+	padding-left: 20px;
 }
 .sidebar_nav {
 	padding-left: 11px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	white-space: nowrap;
+	padding-right: 11px;
 }
 
 .sidebar_nav li:nth-child(6) {
@@ -135,8 +138,6 @@ input[type="search"] {
 
 .dashboard {
 	display: flex;
-	/* align-items: center; */
-	/* justify-content: center; */
 }
 
 /* !content */
